# python-project-lvl2

./: .gitignore  Makefile  README.md  log  pyproject.toml  setup.cfg
.github/workflows/: python_ci.yml
gendiff/: __init__.py  cli.py  differ.py  generate_diff.py  io.py  parsers.py
gendiff/formaters/: formaters.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: gendiff_test.py
tests/fixtures/nested/: json_diff.txt  jsondiff.py
