[tool.poetry]
name = "hexlet-code"
version = "1.8"
description = "CLI and library diff utilite"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "gendiff" },
]
[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"
pytest-cov = "^2.12.1"
pytest = "^6.2.4"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'
